<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Seleccione una persona: "/>

        <Spinner
            android:id="@+id/spinnerPDC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Seleccione una tarea para asignar: "/>

        <Spinner
            android:id="@+id/spinnerTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="Fecha de inicio (YYYY-MM-DD)"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="Fecha de término (YYYY-MM-DD)"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fechadesde"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginRight="5sp"
                android:layout_marginLeft="5sp"/>

            <EditText
                android:id="@+id/fechahasta"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginRight="5sp"
                android:layout_marginLeft="5sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="Hora de inicio (HH:MM:SS):"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="Hora de término (HH:MM:SS):"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/horadesde"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginRight="5sp"
                android:layout_marginLeft="5sp"/>

            <EditText
                android:id="@+id/horahasta"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginRight="5sp"
                android:layout_marginLeft="5sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="Seleccione los días a la semana que se desempeñará la tarea:"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/lunes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lunes"/>

                <CheckBox
                    android:id="@+id/jueves"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Jueves"/>

                <CheckBox
                    android:id="@+id/domingo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Domingo"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/martes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Martes"/>

                <CheckBox
                    android:id="@+id/viernes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Viernes"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/miercoles"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Miércoles"/>

                <CheckBox
                    android:id="@+id/sabado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sábado"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnAddActivity"
            android:layout_width="200dp"
            android:background="@drawable/bordes_redondos"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:text="Guardar"/>
    </LinearLayout>
</LinearLayout>