<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen_logo"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_marginTop="80sp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/userLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="Correo electrónico"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_baseline_perm_identity_24"/>

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userLogin"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_baseline_lock_24"/>

        <RadioButton
            android:id="@+id/RBsesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="@color/colorAccent"
            android:hint="No cerrar sesión"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bordes_redondos"
            android:text="Ingresar"
            android:textColor="#CBDACC"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:onClick="iniciarSesion" />

        <TextView
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:inputType="textUri"
            android:text="Registrarse aquí"
            android:textSize="16sp"
            android:onClick="iniciarRegistro"/>

        <ProgressBar
            android:id="@+id/progressLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_register"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:layout_margin="20dp"/>
    </LinearLayout>

</LinearLayout>