<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/libro"
            android:clickable="true"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:src="@drawable/bitmap1"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/panel"
            android:clickable="true"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:src="@drawable/bitmap2"
            android:layout_weight="1"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>